# Testalo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  gen-doc-cov.sh  source.rs  template.rs  test.sh  tree
.github/workflows/: coverage.yml  docs.yml
backend/: Cargo.toml  build.rs
backend/frontend/: Cargo.toml  Trunk.toml  index.html
backend/frontend/src/: app.rs
backend/frontend/src/components/: login.rs  mod.rs  problem_selector.rs
backend/frontend/src/pages/: login.rs
backend/src/: auth.rs  lib.rs  main.rs  problems.rs  test.rs
frontend/: Cargo.toml  package-lock.json
frontend/src/: main.rs
frontend/src/components/: exercise_input.rs  github.rs  mod.rs  problem_selector.rs  register.rs
frontend/src/pages/: counter.rs  mod.rs  register.rs  test_upload.rs
load-test/: Cargo.toml
load-test/src/: main.rs
orchestrator/: Cargo.toml
orchestrator/src/: default_memory.rs  executor.rs  executor_trait.rs  lib.rs  memory.rs  orchestrator.rs  plugin.rs  prelude.rs  test.rs
procedural/: Cargo.toml
procedural/src/: lib.rs
procedural/tests/: test_macro.rs
procedural/tests/import/: mod.rs  test_1.rs  test_2.rs
rust-default/: Cargo.toml
rust-default/src/: docker.rs  embed.rs  lib.rs  prelude.rs  test.rs
rust-default/src/generator/: compile.rs  default_cargo.toml  mod.rs  parser.rs  run.rs
rust-default/src/generatorv2/: compiled.rs  default_cargo.toml  error.rs  file_generator.rs  mod.rs  parser.rs  run.rs  test_definition.rs
rust-default/src/plugins/: cli.rs  cli_v2.rs  log_memory.rs  mod.rs  rust_default.rs  rust_default_v2.rs  stateless.rs
sql-abstractor/: Cargo.toml
sql-abstractor/src/: helpers.rs  lib.rs  test.rs
sql-abstractor/src/sql/create_db/: 1_users.sql  2_problems.sql  3_enabled_executors.sql  4_submissions.sql  5_test_results.sql
student_delivery/: Cargo.toml
student_delivery/src/: main.rs
student_delivery/src/exercise/: es1.rs  es2.rs
