[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
gloo = {version="0.11.0", features = []}
gloo-net = {version="0.5.0", features = ["json"]}
yew = { version="0.21", features = ["csr"] }
patternfly-yew = { version = "0.5", features = ["tree", "icons-fab"] }
yew-nested-router = "0.6"
browser-panic-hook = "0.2"
gloo-utils = "0.2"

#not sure if needed
yew-hooks="0.3"
yew-more-hooks="0.3"
wasm-bindgen-futures="0.4"
serde_json = "1.0"
syn = {version="2.0", features = ["parsing", "full"]}
prettyplease = "0.2"
proc-macro2={version ="1.0.81", features=["span-locations"]}
serde = {version = "1.0", features = []}
yew-router="0.18"
strum = {version="0.26", features = ["std"]}
reqwest = {version ="0.12"}#, "multipart"

#pollster = "0.3"
#reqwest-wasm = {version="0.11.16", features = ["blocking"]}
ehttp = {version="0.5.0", features = ["multipart"]}
console_log = "1.0.0"
log = "0.4"
[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement",
    "MediaQueryList"
]
