[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1"


tokio={version = "1.38", features = ["sync", "rt", "macros"]}
thiserror="1.0"
#downcast-rs="1.2"
#futures-util="0.3"
#dyn-clone="1.0"
chrono="0.4"

serde_json = "1.0"
serde = {version="1.0", features = ["serde_derive"]}
async-trait = "0.1"
rand="0.8"