[package]
name = "procedural"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn={version="2.0", features = ["parsing", "printing", "clone-impls", "extra-traits", "fold"], default-features=false}
rust-default={path="../rust-default"}
quote="1.0"
prettyplease = "0.2"


[dev-dependencies]
oorandom="11.0"