[package]
name = "rust-default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orchestrator={path="../orchestrator"}
tokio={version = "1.36", features = ["fs", "process", "macros", "rt-multi-thread", "time"]} #features = ["full"]
bollard = {version="0.16", optional = true}

syn={version="2.0", features = ["parsing", "printing", "clone-impls", "visit", "extra-traits", "fold", "visit-mut"], default-features=false} #"derive" 
quote="1.0"
prettyplease="0.2"

tempdir="0.3"
serde_json = "1.0"
#toml = "0.8"

thiserror ="1.0"
#futures-util = "0.3"

rocket = {version="0.5.0", optional=true}
inquire = "0.7"
#crossterm = "0.27"
copy_dir = "0.1"
indicatif  ="0.17"

tikv-jemallocator = "0.5"
cap = "0.1"
proc-macro2 = {version="1.0", features=["span-locations"]}
clap = { version = "4.5.18", features = ["derive"] }

[features]
#default = ["rocket", "docker"]
rocket = ["dep:rocket"]
docker = ["dep:bollard"]