[package]
name = "rust-default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orchestrator={path="../orchestrator"}
tokio={version = "1.36", features = ["fs", "process", "macros", "rt-multi-thread", "time"]} #features = ["full"]
bollard = {version="0.17", optional = true}

syn={version="2.0", features = ["parsing", "printing", "clone-impls", "visit", "extra-traits", "fold", "visit-mut"], default-features=false} #"derive" 
quote="1.0"
prettyplease="0.2"

tempdir="0.3"
serde_json = {version="1.0", default-features = false}
#toml = "0.8"

thiserror ="1.0"
#futures-util = "0.3"

#crossterm = "0.27"
#dircpy = "0.3"
copy_dir = "0.1"
indicatif  ={version="0.17", optional = true}
clap = { version = "4.5.18", features = ["derive"], optional = true}
inquire = {version="0.7", optional = true}
#tikv-jemallocator = "0.5"
#cap = "0.1"
proc-macro2 = {version="1.0", features=["span-locations"]}

[features]
default = ["cli", "indicatif"]
docker = ["dep:bollard"]
cli = ["dep:clap", "dep:inquire"]
indicatif = ["dep:indicatif"]
