[package]
name = "sql-abstractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version="0.7", features = ["postgres", "chrono", "runtime-tokio"]}
thiserror = "1.0"
scrypt = "0.11"
tokio = "1.0"
rand = "0.8"
orchestrator = {path="../orchestrator"}
async-trait = "0.1"
dyn-clone = "1.0"